--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   <div class="row d_flex">
                      <div class="col-md-6">
                         <div class="text-bg">
-                           <h1>Digital Marketing Landing Page 2019</h1>
+                           <h1>FIRST TECH CHALLANGE</h1>
                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
                            <a href="#">Read More</a>
                         </div>
