--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                      <div class="col-md-6">
                         <div class="text-bg">
                            <h1>FIRST TECH CHALLANGE</h1>
-                           <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,</p>
+                           <p>FIRST TECH CHALLENGE is a worldwide robotics competition.  Teams design, build, and code robots to compete in an alliance format against other teams. Robots are built from a reusable platform, powered by Android technology, and can be coded using a variety of levels of Java-based programming.  Each year we will build a robot about the size of a microwave and compete against other North Texas ,</p>
                            <a href="#">Read More</a>
                         </div>
                      </div>
