--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <span>Increase your client for</span>
-                     <h2>Better position of Business</h2>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page </p>
+                     <span>YOUR</span>
+                     <h2>Invited</h2>
+                     <p> </p>
                   </div>
                </div>
             </div>
@@ -119,7 +119,7 @@
                      <div class="col-md-12">
                         <div class="business_box ">
                            <figure><img src="images/business_img.jpg" alt="#"/></figure>
-                           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believableThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
+                           <p>We are recruiting for next year's FIRST TECH CHALLENGE Teams!  We have two teams of 15 students each, Varsity Team, One Byte @ a Time, and JV Team, Work in Progress.  We are looking for problem solvers, organizers, programmers, and marketers, and engineers.</p>
                            <a class="read_more" href="#">Read more</a>
                         </div>
                      </div>
