--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <span>Previous Projects</span>
-                     <h2>Better position of Business</h2>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page </p>
+                     <span>Working As a</span>
+                     <h2>Team</h2>
+                     <p> </p>
                   </div>
                </div>
             </div>
@@ -151,7 +151,7 @@
                      </div>
                      <div class="col-md-12">
                         <div class="projects_box ">
-                           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believableThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
+                           <p>One Byte at a Time is a group of seniors, juniors, and sophomores that came together in early 2021 to compete with a robot that represents the vibrancy and intellectual strength of its members. With a strong understanding of Project-Based Learning (PBL) and collaboration, we have worked together to create a strong and dedicated team. Each team member is dedicated and hard-working to FTC. Any problems we face are met as a Team where we collaborate and bring together our unique and innovative perspectives to come up with creative and distinct solutions that allow us to succeed and create an impressive robot.  </p>
                            <a class="read_more" href="#">Read more</a>
                         </div>
                      </div>
