--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>Contact us</h2>
-                     <span>There are many variations of passages of Lorem Ipsum available, but the </span>
+                     <span>We will get back to you in a timely manner </span>
                   </div>
                </div>
             </div>
@@ -238,8 +238,8 @@
                <div class="row">
                   <div class="col-md-12 ">
                      <div class="cont">
-                        <h3> <strong class="multi"> Free Multipurpose Responsive</strong><br>
-                           Landing Page 2019
+                        <h3> <strong class="multi"> </strong><br>
+                           
                         </h3>
                      </div>
                   </div>
