--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="full">
                            <div class="center-desk">
                               <div class="logo">
-                                 <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                                 <a href="index.html"><img src="images/logo.png" width="100" height="100" alt="#" /></a>
                               </div>
                            </div>
                         </div>
@@ -85,7 +85,7 @@
                   <div class="row d_flex">
                      <div class="col-md-6">
                         <div class="text-bg">
-                           <h1>FIRST TECH CHALLANGE</h1>
+                           <h1>UR MOM</h1>
                            <p>FIRST TECH CHALLENGE is a worldwide robotics competition.  Teams design, build, and code robots to compete in an alliance format against other teams. Robots are built from a reusable platform, powered by Android technology, and can be coded using a variety of levels of Java-based programming.  Each year we will build a robot about the size of a microwave and compete against other North Texas ,</p>
                            <a href="#">Read More</a>
                         </div>
