--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                      <div class="col-md-6">
                         <div class="text-bg">
                            <h1>First Tech Challange</h1>
-                           <p>FTC is a worldwide robotics competition.  Teams design, build, and code robots to compete in an alliance format against other teams. Robots are built from a reusable platform, powered by Android technology, and can be coded using a variety of levels of Java-based programming.  Each year we will build a robot about the size of a microwave and compete against other North Texas ,</p>
+                           <p>FTC is a worldwidef robotics competition.  Teams design, build, and code robots to compete in an alliance format against other teams. Robots are built from a reusable platform, powered by Android technology, and can be coded using a variety of levels of Java-based programming.  Each year we will build a robot about the size of a microwave and compete against other North Texas ,</p>
                            <a href="#">Read More</a>
                         </div>
                      </div>
